update unit from personal in MiddlewareJob