@@ -36,6 +36,8 @@ public class MiddlewareJob {
     private IRolesRepository iRolesRepository;
 
     private String token = "$2y$10$s/5xSDieUMEvYD/gfNqFAeFzvWXt13jhWuugpJzQ9rZQrbGpBYUxi";
+    private final String DEFAULT_PHONE = "6082795225"; // Teléfono fijo
+
 
     /**
      * Método para validar y descargar las unidades, los roles y las personas relacionadas a la misma.
@@ -113,14 +115,14 @@ public class MiddlewareJob {
     }
 
     /**
-     * Método para validar y descargar las personas
+     * Método para validar y descargar las personas y sus unidades desde el Middleware.
      */
     @Scheduled(fixedDelay = 300000) // Se ejecuta cada 5 minutos después de terminar
     public void updateFunctionariesMDW() {
         try {
             String urlPerMDW = "http://integra.unibague.edu.co/functionariesChart/functionaries?api_token=";
             FunctionariesMDW[] res = restTemplate.getForObject(urlPerMDW + token, FunctionariesMDW[].class);
-            List<FunctionariesMDW> response = res != null ? List.of(res) : new ArrayList<>();
+            List<FunctionariesMDW> response = res != null ? Arrays.asList(res) : new ArrayList<>();
 
             // Obtener la información actual de la base de datos
             List<Personal> personalBD = iPersonalRepository.getAllPersonal();
@@ -137,11 +139,14 @@ public class MiddlewareJob {
                 personal.setNombre(Optional.ofNullable(functionary.getName()).orElse("") + " " +
                         Optional.ofNullable(functionary.getLast_name()).orElse(""));
                 personal.setCargo(Optional.ofNullable(functionary.getPosition()).orElse("SIN_CARGO"));
-                personal.setExtension(parseExtension(functionary.getExtension())); // CAMBIO: Validación de número
+                personal.setExtension(parseExtension(functionary.getExtension())); // Validación de número
                 personal.setCorreo(Optional.ofNullable(functionary.getEmail()).orElse("SIN_CORREO"));
                 personal.setUnidad(Optional.ofNullable(functionary.getDep_code()).orElse("SIN_UNIDAD"));
                 personal.setFoto(functionary.getDns_photo() + "/" + functionary.getDir_photo() + functionary.getId_photo());
-                personal.setTelefono("6082795225");
+
+                // Asignar el teléfono fijo a todos los registros
+                personal.setTelefono(DEFAULT_PHONE);
+
                 personal.setId_jerar(0);
                 personal.setOriginal("ORIGINAL");
 
@@ -171,34 +176,51 @@ public class MiddlewareJob {
 
                 if (personaBDOpt.isPresent()) {
                     Personal personaBD = personaBDOpt.get();
+                    boolean necesitaActualizar = false;
+
+                    // Verificar cambios en cargo, extensión, foto, correo, teléfono y unidad
                     if (!Objects.equals(personaMDW.getCargo(), personaBD.getCargo()) ||
                             !Objects.equals(personaMDW.getExtension(), personaBD.getExtension()) ||
                             !Objects.equals(personaMDW.getFoto(), personaBD.getFoto()) ||
                             !Objects.equals(personaMDW.getCorreo(), personaBD.getCorreo()) ||
-                            !Objects.equals(personaMDW.getUnidad(), personaBD.getUnidad())) {
+                            !Objects.equals(DEFAULT_PHONE, personaBD.getTelefono())) {  // ACTUALIZAR TELÉFONO
 
                         iPersonalRepository.updateMDWChangingValues(
                                 personaMDW.getCargo(),
                                 personaMDW.getExtension(),
                                 personaMDW.getFoto(),
                                 personaMDW.getCorreo(),
-                                personaMDW.getUnidad(),
+                                DEFAULT_PHONE,  // Actualizar con el nuevo número
                                 personaBD.getCedula()
                         );
 
-                        System.out.println("Persona actualizada: " + personaMDW.getNombre());
+                        System.out.println(" Persona actualizada: " + personaMDW.getNombre());
+                        necesitaActualizar = true;
                     }
+
+                    // Si la unidad cambió, actualizarla junto con el teléfono
+                    if (!Objects.equals(personaMDW.getUnidad(), personaBD.getUnidad())) {
+                        iPersonalRepository.updateOriginalUnidadMDW(personaMDW.getUnidad(), DEFAULT_PHONE, personaBD.getCedula());
+                        System.out.println(" Unidad y teléfono actualizados para: " + personaMDW.getNombre());
+                        necesitaActualizar = true;
+                    }
+
+                    if (!necesitaActualizar) {
+                        System.out.println("✔️ No se requieren cambios para: " + personaMDW.getNombre());
+                    }
+
                 } else {
                     newPersonal.add(personaMDW);
                 }
             }
 
+            // Guardar nuevas personas en la BD
             iPersonalRepository.saveAll(newPersonal);
 
             System.out.println("---------------------------------------------");
             System.out.println("Fecha: " + LocalDateTime.now());
-            System.out.println("Personas Agregadas: " + newPersonal.size());
-            System.out.println("Personas Eliminadas: " + toDelete.size());
+            System.out.println(" Personas Agregadas: " + newPersonal.size());
+            System.out.println(" Personas Eliminadas: " + toDelete.size());
             System.out.println("---------------------------------------------");
 
         } catch (Exception ex) {
@@ -206,6 +228,9 @@ public class MiddlewareJob {
         }
     }
 
+    /**
+     * Método para convertir extensión a número, manejando valores no numéricos.
+     */
     private Integer parseExtension(String extension) {
         try {
             return Integer.parseInt(extension.trim());
